[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-ledger"
version = "0.1.0"
description = "Local-first decision ledger with SQLite-backed audit and retrieval."
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
decisions = "decision_ledger.cli:main"
decision-ledger-mcp = "decision_ledger.mcp_server:main"
decision-wiki-server = "decision_ledger.wiki_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
